# fastapi-taskiq-dishka-template

./: README.md  pyproject.toml
api/: api.py  config.py  deps.py  dto.py  entity.py  repository.py
