[tool.poetry]
name = "fastapi-taskiq-dishka-template"
version = "0.1.0"
description = ""
authors = ["Jonathan Wadin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dishka = "^1.3.0"
fastapi = {extras = ["standard"], version = "0.115.0"}
taskiq = "^0.11.7"
SQLAlchemy = "^2.0.35"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"
mypy = "^1.11.2"
ruff-lsp = "^0.0.57"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
